--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="The wedding of Saiful & Cindy. Selasa 16 Mei 2023" />
-    <meta name="keywords" content="saiful, saiful akbar, cindy, cindy nadya, wedding website, wedding invitation" />
+    <meta name="description" content="The wedding of Nagaraj & Habi. Wednesday, 28 may 2025" />
+    <meta name="keywords" content="Nagaraj, naga, Habi, Habinaya, wedding website, wedding invitation" />
     
     <!-- Title -->
     <title>The wedding of Saiful & Cindy</title>
@@ -17,7 +17,7 @@
     <link href="/assets/icons/ios/128.png" rel="icon" sizes="128x128" />
 
     <!-- iOS -->
-    <meta name="apple-mobile-web-app-title" content="The wedding of Saiful & Cindy" />
+    <meta name="apple-mobile-web-app-title" content="The wedding of Nagaraj & Habi." />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="default" />
     <link href="/assets/icons/ios/48.png" rel="apple-touch-icon" />
@@ -57,19 +57,19 @@
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary" />
-    <meta name="twitter:url" content="https://saifulcindy.vercel.app" />
-    <meta name="twitter:title" content="The wedding of Saiful & Cindy" />
-    <meta name="twitter:description" content="Selasa, 16 Mei 2023" />
-    <meta name="twitter:image" content="https://saifulcindy.vercel.app/assets/images/logo/banner.webp" />
+    <meta name="twitter:url" content="https://nagarajhabi.vercel.app" />
+    <meta name="twitter:title" content="The wedding of Nagaraj & Habi." />
+    <meta name="twitter:description" content="Wednesday, 28 may 2025" />
+    <meta name="twitter:image" content="https://nagarajhabi.vercel.app/assets/images/logo/banner.webp" />
     <meta name="twitter:creator" content="@Saiful_akbar13" />
 
     <!-- Open Graph -->
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="The wedding of Saiful & Cindy" />
-    <meta property="og:description" content="Selasa, 16 Mei 2023" />
-    <meta property="og:site_name" content="Saiful & Cindy" />
-    <meta property="og:url" content="https://saifulcindy.vercel.app" />
-    <meta property="og:image" content="https://saifulcindy.vercel.app/assets/images/logo/banner.webp" />
+    <meta property="og:title" content="The wedding of Nagaraj & Habi." />
+    <meta property="og:description" content="Wednesday, 28 may 2025" />
+    <meta property="og:site_name" content="Nagaraj & Habi" />
+    <meta property="og:url" content="https://nagarajhabi.vercel.app" />
+    <meta property="og:image" content="https://nagarajhabi.vercel.app/assets/images/logo/banner.webp" />
     <meta property="og:image:width" content="2008" />
     <meta property="og:image:height" content="2434" />
     
